~ Fine tuning settings are visible by default and come with visible help text
~ Added a Start button near the archive selection since most users don't need to set up Kicksart's FTP or Hybrid file writer
~ restore.php: protect against insane 3PDs enabling direct unauthenticated access to remote.php
# [MEDIUM] Time settings were not taken into account

Kickstart 5.4.2
================================================================================
~ Internal improvements relating to the Site Transfer Wizard

Kickstart 5.4.1
================================================================================
- Removing the URL Import feature from the Core version (for security reasons). This feature is only safe when kickstart.php is renamed to a hard to guess name.

Kickstart 5.4.0
================================================================================
~ Improved internal authentication between the client (browser) and server parts of the application

Kickstart 5.3.1
================================================================================
! Akeeba Restore (restore.php) would always throw an error about the file being invalid.
# [HIGH] JPS extraction was broken
# [LOW] No progress is show when extracting JPS archives

Kickstart 5.3.0
================================================================================
+ Support for JPS format v2.0 with improved password security
+ Option to restore file permissions
# [HIGH] Importing large files from URL fails with repeated download restarts
# [MEDIUM] The stealth .htaccess doesn't work as expected (thanks invader_11)

Kickstart 5.2.1
================================================================================
# [MEDIUM] Errors in Amazon S3 connection would result in a blank error message on most servers (Pro only)
# [HIGH] Cannot import from Amazon S3 subdirectories (Pro only)

Kickstart 5.2.0
================================================================================